--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="top-container">
 	<img class="cloud" src="images/cloud.png" alt="cloud">
 	<h1> Hey There ! <br> I'm Vikas </h1>
-	<h2> a web developer </h2>
+	<h2> a Software Developer </h2>
 	<img class="lower-cloud" src="images/cloud.png" alt="cloud">
 	<img class="main-image" src="images/mountain.png" alt="Programming">
 	</div>
@@ -24,26 +24,41 @@
   </div>
 	<br />
   <hr>
+  <div class="academics">
+    <br/> 
+    <h2>Academic Details</h2>
+    <div class="skill-row">
+      <img class="skill-image-electronics" src="images/book.png" alt="computer">
+      <h3>B.E. in Electrical and Electronics Engineering</h3>
+      <h4>RSR Rungta College of Engineering & Technology</h4>
+      <p>2014-2018</p>
+    </div>
+    <div class="skill-row">
+      <img class="skill-image-web" src="images/school.png" alt="computer">
+      <h3>High School & Intermediate</h3>
+      <h4>Krishna Public School, Sunder Nagar</h4>
+      <p>2012-14</p>
+     </div><br />
+  </div>
   <div class="skills">
 		<br /><br />
     <h2> <strong>My Skills</strong>.</h2>
     <div class="skill-row">
       <img class="skill-image-web" src="images/computer.png" alt="computer">
-      <h3>Web Developer</h3>
-      <p>Started my web designing career in late 2018 as passion but now I can design and develop professional website with my knowledge of HTML, CSS, JavaScript, AJAX and many more.</p>
-    </div><br />
+      <h3>Java DSA</h3>
+      <p>Good knowledge of Java Data Structures and Algorithms, along with the knowledge of Object Oriented Programming language in Java.</p>
+     </div><br />
 
     <div class="skill-row">
       <img class="skill-image-electronics" src="images/chillies.jfif" alt="computer">
-      <h3>Electrical and Electronics Engineer</h3>
-      <p>As an EEE Engineer I have worked under Canon Ind. Pvt. Ltd. as an Apprentice Engineer for a duration of 1 year. Also I have built many cool things such as smartphone controlled Scrolling display board, Smart Street Lightning System etc.</p>
+      <h3>Web Developer</h3>
+      <p>Started my web designing career in late 2018 as passion but now I can design and develop professional website with my knowledge of HTML, CSS, JavaScript, React and many more.</p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
-    <h2>Get In Touch</h2>
-    <h3>Important Notice.</h3>
-    <p>Please note that this site is still in development. Please fill free to contact me for any feedback and bugs.</p><br /><br />
+    <h3>Contact</h3>
+    <p>Feel free to contact me anytime by clicking on button below.</p><br /><br />
     <a href="mailto:vikaschouhan360@email.com" class="btn">CONTACT ME</a><br /><br />
   </div>
 </div>
@@ -52,7 +67,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
-  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <a class="footer-link" href="https://github.com/vikaschouhan97">Website</a>
   <p>© 2020 Vikas Chouhan.</p>
 </div>
 </body>
